--- a/.github/workflows/keepalive.yml.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml.github/workflows/keepalive.yml
@@ -26,3 +26,4 @@ jobs:
           wake "https://tnecase-opt.streamlit.app/"
           wake "https://tneopt-app.streamlit.app/"
           wakw "https://tnemerge.streamlit.app/"
+          wakw "https://tnecase-opt1.streamlit.app/"
