--- a/.github/workflows/keepalive.yml.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml.github/workflows/keepalive.yml
@@ -19,11 +19,4 @@ jobs:
               > /dev/null || echo "Failed to wake $1"
           }
 
-          wake "https://tnecase-web-page.streamlit.app/"
-          wake "https://tne-case-web-sc1.streamlit.app/"
-          wake "https://tneopt-app.streamlit.app/"
-          wake "https://tnecase-web-page-01.streamlit.app/"
-          wake "https://tnecase-opt.streamlit.app/"
-          wake "https://tneopt-app.streamlit.app/"
-          wakw "https://tnemerge.streamlit.app/"
-          wakw "https://tnecase-opt1.streamlit.app/"
+          wake "https://tnecase-opt1.streamlit.app/"
