--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Desktop Apps (Windows .exe + macOS .app)
+name: Build TGECase (Windows .exe + macOS .app)
 
 on:
   workflow_dispatch:
@@ -7,12 +7,8 @@ on:
       - "v*"
 
 jobs:
-  build:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [windows-latest, macos-13, macos-14] # macos-13: Intel, macos-14: Apple Silicon
-    runs-on: ${{ matrix.os }}
+  build-windows:
+    runs-on: windows-latest
 
     steps:
       - name: Checkout
@@ -24,46 +20,51 @@ jobs:
           python-version: "3.11"
           cache: "pip"
           cache-dependency-path: |
-            optimize/requirements.txt
             requirements.txt
+            optimize/requirements.txt
+            single_page/requirements.txt
 
-      - name: Install dependencies
-        shell: bash
+      - name: Install deps
+        shell: pwsh
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          if [ -f optimize/requirements.txt ]; then
-            python -m pip install -r optimize/requirements.txt
-          elif [ -f requirements.txt ]; then
-            python -m pip install -r requirements.txt
-          else
-            echo "No requirements.txt found." && exit 1
-          fi
-          python -m pip install --upgrade pyinstaller
 
-          # gurobipy requirements içinde yoksa bile dene (fail olursa build devam etsin)
-          python -m pip install gurobipy || true
+          if (Test-Path "requirements.txt") { pip install -r requirements.txt }
+          if (Test-Path "optimize/requirements.txt") { pip install -r optimize/requirements.txt }
+          if (Test-Path "single_page/requirements.txt") { pip install -r single_page/requirements.txt }
 
-      - name: Validate required folders
-        shell: bash
+          pip install pyinstaller
+          # opsiyonel: varsa kur
+          pip install gurobipy
+
+      - name: Stage bundle folders
+        shell: pwsh
         run: |
-          test -f launcher.py || (echo "launcher.py missing at repo root" && exit 1)
-          test -d optimize || (echo "optimize/ folder missing" && exit 1)
-          test -d single_page || (echo "single_page/ folder missing" && exit 1)
+          Remove-Item -Recurse -Force _bundle_app -ErrorAction SilentlyContinue
+          New-Item -ItemType Directory _bundle_app | Out-Null
 
-      # ---------------------------
-      # Windows build (.exe, zip)
-      # ---------------------------
-      - name: Build (Windows)
-        if: runner.os == 'Windows'
+          # optimize içini app olarak bundle’a kopyala
+          Copy-Item -Recurse -Force optimize\* _bundle_app\
+
+          # Entry Total.py: önce optimize/Total.py varsa onu, yoksa root Total.py
+          if (Test-Path "optimize/Total.py") {
+            Copy-Item -Force optimize/Total.py _bundle_app/Total.py
+          } elseif (Test-Path "Total.py") {
+            Copy-Item -Force Total.py _bundle_app/Total.py
+          } else {
+            throw "Neither optimize/Total.py nor Total.py exists."
+          }
+
+      - name: Build Windows (.exe folder)
         shell: pwsh
         run: |
           if (Test-Path build) { Remove-Item -Recurse -Force build }
           if (Test-Path dist)  { Remove-Item -Recurse -Force dist }
 
-          # NOTE: Windows add-data uses ";" separator
           python -m PyInstaller `
             --noconfirm --clean --onedir --noconsole `
             --name "TGECase" `
+            --copy-metadata streamlit `
             --collect-all streamlit `
             --collect-all plotly `
             --collect-all altair `
@@ -72,29 +73,100 @@ jobs:
             --collect-all numpy `
             --collect-all scipy `
             --collect-all geopy `
-            --copy-metadata streamlit `
             --collect-all gurobipy `
             --collect-binaries gurobipy `
             --collect-submodules gurobipy `
-            --add-data "optimize;app" `
+            --add-data "_bundle_app;app" `
             --add-data "single_page;single_page" `
             launcher.py
 
           Compress-Archive -Path dist\TGECase\* -DestinationPath dist\TGECase-windows.zip
 
-      # ---------------------------
-      # macOS build (.app, zip)
-      # ---------------------------
-      - name: Build (macOS)
-        if: runner.os == 'macOS'
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: TGECase-windows
+          path: dist/TGECase-windows.zip
+
+
+  build-macos:
+    runs-on: macos-14
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [arm64, x64]   # arm64: Apple Silicon, x64: Intel target (Rosetta)
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Rosetta (x64 only)
+        if: matrix.arch == 'x64'
         shell: bash
         run: |
+          /usr/sbin/softwareupdate --install-rosetta --agree-to-license
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          architecture: ${{ matrix.arch }}
+          cache: "pip"
+          cache-dependency-path: |
+            requirements.txt
+            optimize/requirements.txt
+            single_page/requirements.txt
+
+      - name: Install deps
+        shell: bash
+        run: |
+          set -e
+          python -c "import platform; print('PY ARCH:', platform.machine())"
+
+          python -m pip install --upgrade pip setuptools wheel
+
+          [ -f requirements.txt ] && python -m pip install -r requirements.txt || true
+          [ -f optimize/requirements.txt ] && python -m pip install -r optimize/requirements.txt || true
+          [ -f single_page/requirements.txt ] && python -m pip install -r single_page/requirements.txt || true
+
+          python -m pip install pyinstaller
+          python -m pip install gurobipy || true
+
+      - name: Stage bundle folders
+        shell: bash
+        run: |
+          set -e
+          rm -rf _bundle_app
+          mkdir -p _bundle_app
+
+          # optimize içini app olarak bundle’a kopyala
+          rsync -a optimize/ _bundle_app/
+
+          # Entry Total.py: önce optimize/Total.py varsa onu, yoksa root Total.py
+          if [ -f optimize/Total.py ]; then
+            cp -f optimize/Total.py _bundle_app/Total.py
+          elif [ -f Total.py ]; then
+            cp -f Total.py _bundle_app/Total.py
+          else
+            echo "Neither optimize/Total.py nor Total.py exists." && exit 1
+          fi
+
+      - name: Build macOS (.app)
+        shell: bash
+        run: |
+          set -e
           rm -rf build dist || true
 
-          # NOTE: macOS add-data uses ":" separator
-          python -m PyInstaller \
+          if [ "${{ matrix.arch }}" = "x64" ]; then
+            PY="arch -x86_64 python"
+          else
+            PY="python"
+          fi
+
+          $PY -m PyInstaller \
             --noconfirm --clean --onedir --windowed \
             --name "TGECase" \
+            --copy-metadata streamlit \
             --collect-all streamlit \
             --collect-all plotly \
             --collect-all altair \
@@ -103,17 +175,14 @@ jobs:
             --collect-all numpy \
             --collect-all scipy \
             --collect-all geopy \
-            --copy-metadata streamlit \
-            --add-data "optimize:app" \
+            --add-data "_bundle_app:app" \
             --add-data "single_page:single_page" \
             launcher.py
 
-          ARCH="$(uname -m)"
-          # dist/TGECase.app -> zip
-          ditto -c -k --sequesterRsrc --keepParent "dist/TGECase.app" "dist/TGECase-macOS-${ARCH}.zip"
+          ditto -c -k --sequesterRsrc --keepParent "dist/TGECase.app" "dist/TGECase-macOS-${{ matrix.arch }}.zip"
 
-      - name: Upload artifacts
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: TGECase-${{ matrix.os }}
-          path: dist/*.zip
+          name: TGECase-macos-${{ matrix.arch }}
+          path: dist/TGECase-macOS-${{ matrix.arch }}.zip
